Add some translations

--- a/l10n/po/ja_JP/_guides/amqp.adoc.po
+++ b/l10n/po/ja_JP/_guides/amqp.adoc.po
@@ -299,7 +299,7 @@ msgstr "@RegisterForReflection"
 #: upstream/_guides/amqp.adoc:156
 #, fuzzy
 msgid "The `@RegisterForReflection` annotation instructs Quarkus to include the class (including fields and methods) when building the native executable.  This will be useful later when we run the applications as native executables inside containers.  Without, the native compilation would remove the fields and methods during the dead-code elimination phase."
-msgstr "`@RegisterForReflection` アノテーションは、ネイティブな実行ファイルをビルドする際に、クラス（フィールドとメソッドを含む）を含めるようQuarkusに指示します。これは、後でアプリケーションをコンテナ内のネイティブ実行可能ファイルとして実行する際に役立ちます。これがないと、ネイティブのコンパイル時にデッドコードの除去段階でフィールドやメソッドが削除されてしまいます。"
+msgstr "`@RegisterForReflection` アノテーションは、ネイティブ実行可能ファイルをビルドする際に、クラス（フィールドとメソッドを含む）を含めるようQuarkusに指示します。これは、後でアプリケーションをコンテナ内のネイティブ実行可能ファイルとして実行する際に役立ちます。これがないと、ネイティブのコンパイル時にデッドコードの除去段階でフィールドやメソッドが削除されてしまいます。"
 
 #. type: Title ==
 #: upstream/_guides/amqp.adoc:158
