--- a/l10n/po/ja_JP/_guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-native-image.adoc.po
@@ -83,7 +83,7 @@ msgstr "Mandrelは、標準のOpenJDKプロジェクトを使用して、Oracle 
 #: upstream/_guides/building-native-image.adoc:50
 #, fuzzy
 msgid "Mandrel is recommended for building native executables that target Linux containerized environments.  This means that Mandrel users are encouraged to use containers to build their native executables.  If you are building native executables for macOS, you should consider using Oracle GraalVM instead, because Mandrel does not currently target this platform.  Building native executables directly on bare metal Linux or Windows is possible, with details available in the https://github.com/graalvm/mandrel/blob/default/README.md[Mandrel README] and https://github.com/graalvm/mandrel/releases[Mandrel releases]."
-msgstr "Mandrelは、Linuxのコンテナ環境をターゲットとしたネイティブな実行ファイルを構築する際に推奨されます。つまり、Mandrelのユーザーはコンテナを使ってネイティブな実行ファイルを構築することが推奨されています。もしmacOS向けにネイティブな実行ファイルをビルドする場合は、代わりにOracle GraalVMの使用を検討してください。なぜなら、Mandrelは現在このプラットフォームをターゲットにしていないからです。ベアメタルのLinuxやWindows上で直接ネイティブ実行可能ファイルをビルドすることは可能で、詳細は link:https://github.com/graalvm/mandrel/blob/default/README.md[Mandrel README]や link:https://github.com/graalvm/mandrel/releases[Mandrelリリース]に記載されています。"
+msgstr "Mandrelは、Linuxのコンテナ環境をターゲットとしたネイティブ実行可能ファイルを構築する際に推奨されます。つまり、Mandrelのユーザーはコンテナを使ってネイティブ実行可能ファイルを構築することが推奨されています。もしmacOS向けにネイティブ実行可能ファイルをビルドする場合は、代わりにOracle GraalVMの使用を検討してください。なぜなら、Mandrelは現在このプラットフォームをターゲットにしていないからです。ベアメタルのLinuxやWindows上で直接ネイティブ実行可能ファイルをビルドすることは可能で、詳細は link:https://github.com/graalvm/mandrel/blob/default/README.md[Mandrel README]や link:https://github.com/graalvm/mandrel/releases[Mandrelリリース]に記載されています。"
 
 #. type: Title ==
 #: upstream/_guides/building-native-image.adoc:51
@@ -409,7 +409,7 @@ msgstr "ネイティブ実行可能ファイルのテスト"
 #. type: delimited block =
 #: upstream/_guides/building-native-image.adoc:233
 msgid "Producing a native executable can lead to a few issues, and so it's also a good idea to run some tests against the application running in the native file."
-msgstr "ネイティブな実行ファイルを生成することはいくつかの問題を引き起こす可能性があるので、ネイティブファイルで実行されているアプリケーションに対していくつかのテストを実行するのも良いアイデアです。"
+msgstr "ネイティブ実行可能ファイルを生成することはいくつかの問題を引き起こす可能性があるので、ネイティブファイルで実行されているアプリケーションに対していくつかのテストを実行するのも良いアイデアです。"
 
 #. type: delimited block =
 #: upstream/_guides/building-native-image.adoc:235
@@ -848,7 +848,7 @@ msgstr "マルチステージDockerビルドの使用"
 #: upstream/_guides/building-native-image.adoc:517
 #, fuzzy
 msgid "The previous section showed you how to build a native executable using Maven or Gradle, but it requires you to have created the native executable first.  In addition, this native executable must be a Linux 64 bits executable."
-msgstr "前のセクションでは、MavenやGradleを使ってネイティブな実行ファイルをビルドする方法を紹介しましたが、それにはまずネイティブな実行ファイルを作成しておく必要があります。また、このネイティブな実行ファイルは、Linux 64bitの実行ファイルである必要があります。"
+msgstr "前のセクションでは、MavenやGradleを使ってネイティブ実行可能ファイルをビルドする方法を紹介しましたが、それにはまずネイティブ実行可能ファイルを作成しておく必要があります。また、このネイティブ実行可能ファイルは、Linux 64bitの実行ファイルである必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:520
@@ -866,7 +866,7 @@ msgstr "ネイティブ実行可能ファイルのコンテナーへのパッケ
 #: upstream/_guides/building-native-image.adoc:523
 #, fuzzy
 msgid "The second stage is a minimal image copying the produced native executable"
-msgstr "第二段階では、生成されたネイティブな実行ファイルをコピーしたミニマムなイメージを作成します。"
+msgstr "第二段階では、生成されたネイティブ実行可能ファイルをコピーしたミニマムなイメージを作成します。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:525
@@ -1073,7 +1073,7 @@ msgstr "ディストロレスイメージは、厳密なテストを行わずに
 #: upstream/_guides/building-native-image.adoc:644
 #, fuzzy, no-wrap
 msgid "Native executable compression"
-msgstr "ネイティブな実行ファイルの圧縮"
+msgstr "ネイティブ実行可能ファイルの圧縮"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:648
