--- a/l10n/po/ja_JP/_guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/cache.adoc.po
@@ -1410,7 +1410,7 @@ msgstr "ネイティブ化"
 #: upstream/_guides/cache.adoc:804
 #, fuzzy
 msgid "The Cache extension supports building native executables."
-msgstr "Cache 拡張機能は、ネイティブな実行ファイルの構築をサポートしています。"
+msgstr "Cache 拡張機能は、ネイティブ実行可能ファイルの構築をサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:808
