--- a/l10n/po/ja_JP/_guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/container-image.adoc.po
@@ -7,23 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: 2021-07-15 22:00+0900\n"
+"PO-Revision-Date: 2022-02-04 17:03+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/container-image.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Container Images"
-msgstr "コンテナーイメージオプション"
+msgstr "コンテナーイメージ"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:11
@@ -47,9 +47,8 @@ msgstr "<<#s2i,S2I>>"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:16
-#, fuzzy
 msgid "<<#buildpack,Buildpack>>"
-msgstr "link:#buildpack[ビルドパック]"
+msgstr "<<#buildpack,Buildpack>>"
 
 #. type: Title ==
 #: upstream/_guides/container-image.adoc:17
@@ -175,19 +174,17 @@ msgstr "S2I のビルドでは、`BuildConfig` と 2 つの `ImageStream` リソ
 
 #. type: Title ===
 #: upstream/_guides/container-image.adoc:97
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Buildpack"
-msgstr "ビルドパック"
+msgstr "Buildpack"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:102
-#, fuzzy
 msgid "The extension `quarkus-container-image-buildpack` is using buildpacks in order to perform container image builds.  Under the hood buildpacks will use a Docker daemon for the actual build.  While buildpacks support alternatives to Docker, this extension will only work with Docker."
 msgstr "`quarkus-container-image-buildpack` は、コンテナイメージのビルドを行うために buildpacks を使用しています。buildpacksは、実際のビルドにDockerデーモンを使用します。buildpacksはDockerの代替品をサポートしていますが、このエクステンションはDockerでのみ動作します。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:104
-#, fuzzy
 msgid "Additionally, the user will have to configure which build image to use (no default image is provided). For example:"
 msgstr "さらに、ユーザーはどのビルドイメージを使用するかを設定する必要があります（デフォルトのイメージは提供されていません）。例えば、以下のようになります。"
 
@@ -199,9 +196,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:111
-#, fuzzy
 msgid "or for native:"
-msgstr "またはネイティブのための"
+msgstr "またはネイティブの場合、"
 
 #. type: delimited block -
 #: upstream/_guides/container-image.adoc:115
@@ -222,7 +218,6 @@ msgstr "プロジェクト用のコンテナーイメージを作成するには
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:131
-#, fuzzy
 msgid "If you ever want to build a native container image and already have an existing native image you can set `-Dquarkus.native.reuse-existing=true` and the native image build will not be re-run."
 msgstr "ネイティブコンテナイメージをビルドしたいときに、すでに既存のネイティブイメージがある場合は、 `-Dquarkus.native.reuse-existing=true` を設定すれば、ネイティブイメージのビルドは再実行されません。"
 
@@ -250,9 +245,8 @@ msgstr "複数のエクステンションから選択する"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:145
-#, fuzzy
 msgid "It does not make sense to use multiple extension as part of the same build. When multiple container image extensions are present, an error will be raised to inform the user. The user can either remove the unneeded extensions or select one using `application.properties`."
-msgstr "複数の拡張機能を同じビルドの一部として使用することは意味がありません。複数のコンテナイメージエクステンションが存在する場合は、エラーが発生してユーザーに通知されます。ユーザーは、不要なエクステンションを削除するか、 `application.properties` を使用してエクステンションを選択することができます。"
+msgstr "複数のエクステンションを同じビルドの一部として使用することは意味がありません。複数のコンテナイメージエクステンションが存在する場合は、エラーが発生してユーザーに通知されます。ユーザーは、不要なエクステンションを削除するか、 `application.properties` を使用してエクステンションを選択することができます。"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:147
@@ -306,7 +300,6 @@ msgstr "quarkus.container-image.image=${CI_REGISTRY_IMAGE}\n"
 
 #. type: Plain text
 #: upstream/_guides/container-image.adoc:176
-#, fuzzy
 msgid "See xref:config.adoc#combine-property-env-var[this] for more information on how to combine properties with environment variables."
 msgstr "プロパティと環境変数を組み合わせる方法については、 link:config.html#combine-property-env-var[こちら]をご覧ください。"
 
