--- a/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-reactive.adoc.po
@@ -607,7 +607,7 @@ msgstr ""
 #: upstream/_guides/getting-started-reactive.adoc:323
 #, fuzzy
 msgid "Or, if you packaged your application as native executable, use:"
-msgstr "あるいは、アプリケーションをネイティブな実行ファイルとしてパッケージ化した場合は、次のように使用します。"
+msgstr "あるいは、アプリケーションをネイティブ実行可能ファイルとしてパッケージ化した場合は、次のように使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started-reactive.adoc:331
