--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache-kotlin.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache-kotlin.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: 2022-01-21 22:28+0900\n"
+"PO-Revision-Date: 2022-02-04 16:43+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: om\n"
@@ -157,9 +157,8 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:94
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:102
-#, fuzzy
 msgid "Note the addition of `-kotlin` on the end. Generally you'll only need this version but if your project will be using both Java and Kotlin code, you can safely include both artifacts."
-msgstr "最後に `-kotlin` が追加されていることに注意してください。通常はこのバージョンのみが必要ですが、プロジェクトでJavaとKotlinの両方のコードを使用する場合は、両方のアーティファクトを安全に含めることができます。"
+msgstr "最後に `-kotlin` が追加されていることに注意してください。通常はこのバージョンのみが必要ですが、プロジェクトでJavaとKotlinの両方のコードを使用する場合は、両方のアーティファクト含めても大丈夫です。"
 
 #. type: Block title
 #: upstream/_guides/hibernate-orm-panache-kotlin.adoc:96
