--- a/l10n/po/ja_JP/_guides/mailer-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer-reference.adoc.po
@@ -585,7 +585,7 @@ msgstr "ネイティブ実行可能ファイルでのSSLの使用"
 #: upstream/_guides/mailer-reference.adoc:334
 #, fuzzy
 msgid "Note that if you enable SSL for the mailer and you want to build a native executable, you will need to enable the SSL support.  Please refer to the xref:native-and-ssl.adoc[Using SSL With Native Executables] guide for more information."
-msgstr "なお、メーラーのSSLを有効にしていて、ネイティブな実行ファイルを作成する場合は、SSLのサポートを有効にする必要があります。詳しくは、 link:native-and-ssl.html[Using SSL With Native Executables]をご参照ください。"
+msgstr "なお、メーラーのSSLを有効にしていて、ネイティブ実行可能ファイルを作成する場合は、SSLのサポートを有効にする必要があります。詳しくは、 link:native-and-ssl.html[Using SSL With Native Executables]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_guides/mailer-reference.adoc:335
