--- a/l10n/po/ja_JP/_guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_guides/native-and-ssl.adoc.po
@@ -178,7 +178,7 @@ msgstr ""
 #: upstream/_guides/native-and-ssl.adoc:81
 #, fuzzy
 msgid "They enable the native SSL support for your native executable.  But you should not set them manually, we have a nice configuration property for this purpose as described below."
-msgstr "これらは、あなたのネイティブな実行ファイルのネイティブなSSLサポートを有効にします。しかし、手動で設定するべきではありません。この目的のために、以下のような優れた設定プロパティが用意されています。"
+msgstr "これらは、あなたのネイティブ実行可能ファイルのネイティブなSSLサポートを有効にします。しかし、手動で設定するべきではありません。この目的のために、以下のような優れた設定プロパティが用意されています。"
 
 #. type: Plain text
 #: upstream/_guides/native-and-ssl.adoc:83
@@ -628,7 +628,7 @@ msgstr "まとめ"
 #: upstream/_guides/native-and-ssl.adoc:264
 #, fuzzy
 msgid "We make building native executable using SSL easy, and provide several options to cope well with different types of security requirements."
-msgstr "私たちは、SSLを使ったネイティブな実行ファイルの構築を容易にし、様々なタイプのセキュリティ要件に対処するための複数のオプションを提供します。"
+msgstr "私たちは、SSLを使ったネイティブ実行可能ファイルの構築を容易にし、様々なタイプのセキュリティ要件に対処するための複数のオプションを提供します。"
 
 #~ msgid "We make building native executable easy and, even if the SSL support in GraalVM is still requiring some serious thinking, it should be mostly transparent when using Quarkus."
 #~ msgstr "ネイティブ実行可能ファイルのビルドを簡単にしています。GraalVMでのSSLサポートはまだ真剣に考える必要があるとしても、Quarkusを使用する場合はほとんど透過的になるはずです。"
