--- a/l10n/po/ja_JP/_guides/native-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/native-reference.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-02-04 21:07+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -27,31 +27,27 @@ msgstr "ネイティブリファレンスガイド"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:14
-#, fuzzy
 msgid "This guide is a companion to the xref:building-native-image.adoc[Building a Native Executable], xref:native-and-ssl.adoc[Using SSL With Native Images], and xref:writing-native-applications-tips.adoc[Writing Native Applications], guides.  It provides further details to debugging issues in Quarkus native executables that might arise during development or production."
-msgstr "このガイドは、 link:building-native-image.html[Building a Native Executable（ネイティブな実行ファイルの構築]）、 link:native-and-ssl.html[Using SSL With Native Images（ネイティブイメージでのSSLの使用]）、 link:writing-native-applications-tips.html[Writing Native Applications（ネイティブアプリケーションの記述]）の各ガイドに付随するものです。このガイドでは、開発時や製造時に発生する可能性のあるQuarkusのネイティブ実行可能ファイルの問題をデバッグするための詳細を説明しています。"
+msgstr "このガイドは、 link:building-native-image.html[ネイティブ実行可能ファイルのビルド]、 link:native-and-ssl.html[Using SSL With Native Images[ネイティブイメージでのSSLの使用]、 link:writing-native-applications-tips.html[ネイティブアプリケーションの作成]の各ガイドに付随するものです。このガイドでは、開発時や本番時に発生する可能性のあるQuarkusのネイティブ実行可能ファイルの問題をデバッグするための詳細を説明しています。"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:16
-#, fuzzy
 msgid "This reference guide takes as input the application developed in the xref:getting-started.adoc[Getting Started Guide]."
-msgstr "このリファレンス・ガイドは、 link:getting-started.html[スタートアップ・ガイド]で開発されたアプリケーションを入力としています。"
+msgstr "このリファレンスガイドは、 link:getting-started.html[入門ガイド]で開発されたアプリケーションを入力としています。"
 
 #. type: Title ==
 #: upstream/_guides/native-reference.adoc:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Requirements and Assumptions"
 msgstr "要件と前提条件"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:23
-#, fuzzy
 msgid "Debugging Quarkus native executables experience is best done within a Linux environment.  Root access is not needed except to install packages required to run some debug steps, or to enable `perf` to gather events at the kernel.  Debugging in macOS and Windows environments also works in a container environment (see <<macwindows,FAQ entry>>)."
 msgstr "Quarkusのネイティブ実行可能ファイルのデバッグは、Linux環境で行うのが最適です。一部のデバッグ手順を実行するために必要なパッケージをインストールする場合や、 `perf` でカーネルのイベントを収集できるようにする場合を除き、ルートアクセスは必要ありません。macOSやWindows環境でのデバッグは、コンテナ環境でも機能します（ link:#macwindows[FAQエントリ]を参照）。"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:25
-#, fuzzy
 msgid "These are the packages you'll need on your Linux environment to run through the different debugging sections:"
 msgstr "これらのパッケージは、異なるデバッグセクションを実行するために、Linux環境で必要となるものです。"
 
@@ -67,9 +63,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:35
-#, fuzzy
 msgid "Aside from system level packages, you'll need:"
-msgstr "システムレベルのパッケージの他に必要なものは"
+msgstr "システムレベルのパッケージの他に、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:37
@@ -88,27 +83,24 @@ msgstr "動作するコンテナーランタイム(Docker, podman)"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:40
-#, fuzzy
 msgid "The code of the application developed in the xref:getting-started.adoc[Getting Started Guide]."
-msgstr "link:getting-started.html[スタートアップガイド]で開発したアプリケーションのコードです。"
+msgstr "link:getting-started.html[入門ガイド]で開発したアプリケーションのコード"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:43
-#, fuzzy
 msgid "Finally, this guide assumes the use of the Mandrel distribution of GraalVM for building native executables, and these are built within a container."
-msgstr "最後に、このガイドでは、ネイティブな実行ファイルをビルドするために、GraalVMのMandrelディストリビューションの使用を想定しており、これらはコンテナ内でビルドされます。"
+msgstr "最後に、このガイドでは、ネイティブ実行可能ファイルをビルドするために、GraalVMのMandrelディストリビューションの使用を想定しており、これらはコンテナ内でビルドされます。"
 
 #. type: Title ==
 #: upstream/_guides/native-reference.adoc:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "First Debugging Steps"
 msgstr "最初のデバッグ手順"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:47
-#, fuzzy
 msgid "As a first step, build the native executable for the application:"
-msgstr "最初のステップとして、アプリケーションのネイティブ実行可能ファイルをビルドします。"
+msgstr "まず最初のステップとして、アプリケーションのネイティブ実行可能ファイルをビルドします。"
 
 #. type: delimited block -
 #: upstream/_guides/native-reference.adoc:52
@@ -121,9 +113,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:55
-#, fuzzy
 msgid "Run the application to verify it works as expected. In one terminal:"
-msgstr "アプリケーションを実行して、期待通りに動作することを確認します。一つの端末で"
+msgstr "アプリケーションを実行して、期待通りに動作することを確認します。一つの端末で以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/native-reference.adoc:59
@@ -134,9 +125,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:62
-#, fuzzy
 msgid "In another:"
-msgstr "別の意味で。"
+msgstr "別のターミナルで以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_guides/native-reference.adoc:66
@@ -146,9 +136,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:69
-#, fuzzy
 msgid "We can obtain basic extra information while building the native executable by adding additional native-image build options using `-Dquarkus.native.additional-build-args`, e.g."
-msgstr "`-Dquarkus.native.additional-build-args` を使ってネイティブイメージのビルドオプションを追加することで、ネイティブな実行ファイルをビルドする際に基本的な追加情報を得ることができます。"
+msgstr "ネイティブ実行可能ファイルをビルドする際に `-Dquarkus.native.additional-build-args` というネイティブイメージのビルドオプションを追加することで、基本的な追加情報を得ることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/native-reference.adoc:75
@@ -161,7 +150,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:78
-#, fuzzy
 msgid "Executing that will produce additional output lines like this:"
 msgstr "これを実行すると、次のような追加の出力行が得られます。"
 
@@ -1026,7 +1014,7 @@ msgstr "しかし、ここで私たちが答えようとしているのは、「
 #: upstream/_guides/native-reference.adoc:619
 #, fuzzy
 msgid "Since we're dealing with a linux native executable, we can use tools like `perf` directly.  To use `perf`, you either have to be an administrator, or you have to set:"
-msgstr "ここでは、linuxのネイティブな実行ファイルを扱っているので、 `perf` のようなツールを直接使うことができます。 `perf` を使用するには、管理者になるか、または、以下のように設定する必要があります。"
+msgstr "ここでは、linuxのネイティブ実行可能ファイルを扱っているので、 `perf` のようなツールを直接使うことができます。 `perf` を使用するには、管理者になるか、または、以下のように設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/native-reference.adoc:623
@@ -1200,7 +1188,7 @@ msgstr "image:native-reference-perf-flamegraph-symbols.png[alt=Perf flamegraph w
 
 #. type: Title ===
 #: upstream/_guides/native-reference.adoc:729
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Multi-Thread"
 msgstr "マルチスレッド"
 
@@ -1322,7 +1310,7 @@ msgstr ""
 #: upstream/_guides/native-reference.adoc:803
 #, fuzzy
 msgid "Build the native executable with debug info:"
-msgstr "デバッグ情報付きのネイティブな実行ファイルをビルドします。"
+msgstr "デバッグ情報付きのネイティブ実行可能ファイルをビルドします。"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:813
@@ -1837,15 +1825,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/native-reference.adoc:1157
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "How do I enable GC logging in native executables?"
 msgstr "ネイティブ実行可能ファイルでGCロギングを有効にするにはどうすればいいですか？"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1161
-#, fuzzy
 msgid "Executing the native executable with `-XX:PrintFlags=` prints a list of flags that can be passed to native executables.  For various levels of GC logging one may use:"
-msgstr "ネイティブ実行可能ファイルを `-XX:PrintFlags=` で実行すると、ネイティブ実行可能ファイルに渡すことのできるフラグのリストが表示されます。様々なレベルのGCロギングのために、次のように使用することができます。"
+msgstr "ネイティブ実行可能ファイルに `-XX:PrintFlags=` を付けて実行すると、ネイティブ実行可能ファイルに渡すことのできるフラグのリストが表示されます。様々なレベルのGCロギングのために、次のように使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/native-reference.adoc:1174
@@ -1865,27 +1852,25 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/native-reference.adoc:1176
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Can I get a heap dump of a native executable? e.g. if it runs out of memory"
 msgstr "ネイティブ実行可能ファイルのヒープダンプを取得することはできますか？ 例えば、メモリ不足になった場合などです。"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1183
-#, fuzzy
 msgid "Unfortunately generating heap dumps in hprof format, which can be opened by tools such as VisualVM or Eclipse MAT, can only be achieved with https://www.graalvm.org/reference-manual/native-image/NativeImageHeapdump[GraalVM Enterprise Edition].  Mandrel, which is based on the GraalVM Community Edition, does not have this capability."
 msgstr "残念ながら、VisualVMやEclipse MATなどのツールで開くことができるhprof形式のヒープダンプを生成することは、 link:https://www.graalvm.org/reference-manual/native-image/NativeImageHeapdump[GraalVM Enterprise Edition]でしか実現できません。GraalVM Community EditionをベースにしたMandrelには、この機能はありません。"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1187
-#, fuzzy
 msgid "Although Mandrel can generate debug symbols and these contain a fair amount of information about object layouts, including what is a pointer field vs a primitive field, this information cannot be used as is to detect memory leaks or find dominator objects.  This is because it has no idea what constitutes a root pointer nor how to recursively trace pointers from those roots."
-msgstr "Mandrelはデバッグシンボルを生成することができ、その中にはポインターフィールドとプリミティブフィールドの違いなど、オブジェクトのレイアウトに関するかなりの情報が含まれていますが、この情報をそのままメモリリークの検出やドミナントオブジェクトの発見に使用することはできません。これは、何がルートポインタを構成するのか、また、それらのルートから再帰的にポインタをトレースする方法がわからないからです。"
+msgstr "Mandrelはデバッグシンボルを生成することができ、その中にはポインターフィールドとプリミティブフィールドの違いなど、オブジェクトのレイアウトに関するかなりの情報が含まれていますが、この情報をそのままメモリリークの検出や支配的なオブジェクトの発見に使用することはできません。これは、何がルートポインタを構成するのか、また、それらのルートから再帰的にポインタをトレースする方法がわからないからです。"
 
 #. type: Title ===
 #: upstream/_guides/native-reference.adoc:1189
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Can I follow these examples if I’m running macOS or Windows?"
-msgstr "macOSやWindowsを使用していても、これらの例に従うことができますか？"
+msgstr "macOSやWindowsを使用していても、これらの例をなぞることはできますか？"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1195
@@ -2129,45 +2114,39 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/native-reference.adoc:1350
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Can I use JFR/JMC to debug or profile native binaries?"
 msgstr "JFR/JMCを使って、ネイティブバイナリのデバッグやプロファイリングはできますか？"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1358
-#, fuzzy
 msgid "https://docs.oracle.com/javacomponents/jmc-5-4/jfr-runtime-guide/about.htm#JFRUH170[Java Flight Recorder (JFR)] and https://www.oracle.com/java/technologies/jdk-mission-control.html[JDK Mission Control (JMC)] can be used to debug profile native binaries since GraalVM CE 21.2.0.  However, JFR in GraalVM is currently significantly limited in capabilities compared to HotSpot.  The custom event API is fully supported, but many VM level features are unavailable.  They will be added in future releases. Current limitations are:"
-msgstr "link:https://docs.oracle.com/javacomponents/jmc-5-4/jfr-runtime-guide/about.htm#JFRUH170[Java Flight Recorder（JFR）]と link:https://www.oracle.com/java/technologies/jdk-mission-control.html[JDK Mission Control（JMC）]は、GraalVM CE 21.2.0以降、プロファイル・ネイティブ・バイナリのデバッグに使用することができます。 しかし、GraalVMのJFRは現在、HotSpotと比較して機能が大幅に制限されています。カスタムイベントAPIは完全にサポートされていますが、多くのVMレベルの機能は利用できません。これらは将来のリリースで追加される予定です。現在の制限事項は以下の通りです。"
+msgstr "link:https://docs.oracle.com/javacomponents/jmc-5-4/jfr-runtime-guide/about.htm#JFRUH170[Java Flight Recorder(JFR)]と link:https://www.oracle.com/java/technologies/jdk-mission-control.html[JDK Mission Control(JMC)]は、GraalVM CE 21.2.0以降、プロファイル・ネイティブ・バイナリのデバッグに使用することができます。 しかし、GraalVMのJFRは現在、HotSpotと比較して機能が大幅に制限されています。カスタムイベントAPIは完全にサポートされていますが、多くのVMレベルの機能は利用できません。これらは将来のリリースで追加される予定です。現在の制限事項は以下の通りです。"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1360
-#, fuzzy
 msgid "Minimal VM level events"
 msgstr "最小限のVMレベルのイベント"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1361
-#, fuzzy
 msgid "No old object sampling"
-msgstr "古いオブジェクトのサンプリングがない"
+msgstr "oldオブジェクトのサンプリングはありません"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1362
-#, fuzzy
 msgid "No stacktrace tracing"
-msgstr "スタックトレースのトレースなし"
+msgstr "スタックトレースのトレースがありません"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1363
-#, fuzzy
 msgid "No Streaming API for JDK 17"
-msgstr "JDK 17にはストリーミングAPIがない"
+msgstr "JDK 17にはストリーミングAPIはありません"
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1366
-#, fuzzy
 msgid "To use JFR add the application property: `-Dquarkus.native.enable-vm-inspection=true`.  E.g."
-msgstr "JFRを使用するには、アプリケーションのプロパティ（ `-Dquarkus.native.enable-vm-inspection=true` ）を追加します。E.g."
+msgstr "JFRを使用するには、アプリケーションのプロパティ `-Dquarkus.native.enable-vm-inspection=true` を追加します。例:"
 
 #. type: delimited block -
 #: upstream/_guides/native-reference.adoc:1372
@@ -2180,7 +2159,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1375
-#, fuzzy
 msgid "Once the image is compiled, enable and start JFR via runtime flags: `-XX:+FlightRecorder` and `-XX:StartFlightRecording`. For example:"
 msgstr "イメージのコンパイルが完了したら、ランタイムフラグ `-XX:+FlightRecorder` と `-XX:StartFlightRecording` を使ってJFRを有効にし、起動します。例えば、以下のようになります。"
 
@@ -2195,6 +2173,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/native-reference.adoc:1383
-#, fuzzy
 msgid "For more details on using JFR, see https://www.graalvm.org/reference-manual/native-image/JFR[here]."
 msgstr "JFRの利用方法については link:https://www.graalvm.org/reference-manual/native-image/JFR[こちら]をご覧ください。"
