--- a/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
@@ -330,7 +330,7 @@ msgstr "自動ネゴシエーションがサポートされているため、 `@
 #: upstream/_guides/rest-client-multipart.adoc:143
 #, fuzzy
 msgid "It will allow to narrow down the number of JAX-RS providers (which can be seen as converters) included in the native executable."
-msgstr "これにより、ネイティブな実行ファイルに含まれるJAX-RSプロバイダー（コンバーターとも言える）の数を絞ることができます。"
+msgstr "これにより、ネイティブ実行可能ファイルに含まれるJAX-RSプロバイダー（コンバーターとも言える）の数を絞ることができます。"
 
 #. type: Title ==
 #: upstream/_guides/rest-client-multipart.adoc:145
