--- a/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
@@ -574,7 +574,7 @@ msgstr "アプリケーションをネイティブ・バイナリとして実行
 #: upstream/_guides/spring-data-rest.adoc:297
 #, fuzzy
 msgid "You can of course create a native executable following the instructions of the xref:building-native-image.adoc[Building native executables] guide."
-msgstr "もちろん、 link:building-native-image.html[「ネイティブな実行ファイルの作成]」の手順に従ってネイティブな実行ファイルを作成することもできます。"
+msgstr "もちろん、 link:building-native-image.html[「ネイティブ実行可能ファイルの作成]」の手順に従ってネイティブ実行可能ファイルを作成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/spring-data-rest.adoc:298
