--- a/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-extensions.adoc.po
@@ -2281,7 +2281,7 @@ msgstr "スタティック・イニシャル時の読み込み"
 #: upstream/_guides/writing-extensions.adoc:1130
 #, fuzzy, no-wrap
 msgid "Re-read during startup (native executable)"
-msgstr "起動時の再読み取り（ネイティブな実行ファイル）"
+msgstr "起動時の再読み取り（ネイティブ実行可能ファイル）"
 
 #. type: Table
 #: upstream/_guides/writing-extensions.adoc:1132
@@ -4254,7 +4254,7 @@ msgstr "ネイティブ実行可能ファイルのサポート"
 #: upstream/_guides/writing-extensions.adoc:2112
 #, fuzzy
 msgid "There Quarkus provides a lot of build items that control aspects of the native executable build. This allows for extensions to programmatically perform tasks such as registering classes for reflection or adding static resources to the native executable. Some of these build items are listed below:"
-msgstr "Quarkusでは、ネイティブな実行ファイルのビルドの側面を制御する多くのビルドアイテムを提供しています。これにより、リフレクションのためにクラスを登録したり、ネイティブ実行可能ファイルに静的リソースを追加したりといったタスクを、拡張機能でプログラム的に実行することができます。これらのビルド項目の一部を以下に示します。"
+msgstr "Quarkusでは、ネイティブ実行可能ファイルのビルドの側面を制御する多くのビルドアイテムを提供しています。これにより、リフレクションのためにクラスを登録したり、ネイティブ実行可能ファイルに静的リソースを追加したりといったタスクを、拡張機能でプログラム的に実行することができます。これらのビルド項目の一部を以下に示します。"
 
 #. type: Labeled list
 #: upstream/_guides/writing-extensions.adoc:2113
