--- a/l10n/po/ja_JP/_includes/faq.html.po
+++ b/l10n/po/ja_JP/_includes/faq.html.po
@@ -146,7 +146,7 @@ msgstr "GraalVMとは？"
 #: upstream/_includes/faq.html:25
 #, fuzzy
 msgid "<a href=\"https://www.graalvm.org\">GraalVM</a> is a universal virtual machine for running applications written in various different languages, as well as providing the ability to compile JVM bytecode to a native executable (this native executable runs a special virtual machine called SubstrateVM). These native executables start much faster and can use a lot less memory than a traditional JVM, however not every JVM feature is supported, and some are more limited than normal."
-msgstr "&lt;a href=\"https://www.graalvm.org\"&gt;GraalVM&lt;/a&gt;は、様々な言語で書かれたアプリケーションを実行するためのユニバーサルな仮想マシンであり、JVMバイトコードをネイティブな実行ファイルにコンパイルする機能も提供しています（このネイティブな実行ファイルはSubstrateVMと呼ばれる特別な仮想マシンを実行します）。これらのネイティブ実行可能ファイルは、従来のJVMよりもはるかに高速に起動し、メモリ使用量も大幅に削減できますが、すべてのJVM機能がサポートされているわけではなく、通常よりも制限されているものもあります。"
+msgstr "&lt;a href=\"https://www.graalvm.org\"&gt;GraalVM&lt;/a&gt;は、様々な言語で書かれたアプリケーションを実行するためのユニバーサルな仮想マシンであり、JVMバイトコードをネイティブ実行可能ファイルにコンパイルする機能も提供しています（このネイティブ実行可能ファイルはSubstrateVMと呼ばれる特別な仮想マシンを実行します）。これらのネイティブ実行可能ファイルは、従来のJVMよりもはるかに高速に起動し、メモリ使用量も大幅に削減できますが、すべてのJVM機能がサポートされているわけではなく、通常よりも制限されているものもあります。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/faq.html:26
