--- a/l10n/po/ja_JP/_posts/2020-02-19-quarkus-1-2-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-02-19-quarkus-1-2-1-final-released.adoc.po
@@ -70,7 +70,7 @@ msgstr "バグフィックスとドキュメントの改善"
 #: upstream/_posts/2020-02-19-quarkus-1-2-1-final-released.adoc:19
 #, fuzzy
 msgid "The most important issue we fixed is the regression in the MariaDB driver when building native executables."
-msgstr "今回修正した最も重要な問題は、ネイティブな実行ファイルをビルドする際のMariaDBドライバのリグレッションです。"
+msgstr "今回修正した最も重要な問題は、ネイティブ実行可能ファイルをビルドする際のMariaDBドライバのリグレッションです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-02-19-quarkus-1-2-1-final-released.adoc:22
