--- a/l10n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-23-supersonic-subatomic-graphql.adoc.po
@@ -644,7 +644,7 @@ msgstr ""
 #: upstream/_posts/2020-06-23-supersonic-subatomic-graphql.adoc:329
 #, fuzzy
 msgid "This will create a native executable and will now start the application very quickly:"
-msgstr "これにより、ネイティブな実行ファイルが作成され、アプリケーションが素早く起動するようになります。"
+msgstr "これにより、ネイティブ実行可能ファイルが作成され、アプリケーションが素早く起動するようになります。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-06-23-supersonic-subatomic-graphql.adoc:340
