--- a/l10n/po/ja_JP/_posts/2021-09-01-using-lra.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-09-01-using-lra.adoc.po
@@ -579,7 +579,7 @@ msgstr "ネイティブモードでは、外部のコーディネーター（ア
 #. type: Plain text
 #: upstream/_posts/2021-09-01-using-lra.adoc:325
 msgid "First build a native executable:"
-msgstr "まず、ネイティブな実行ファイルをビルドします。"
+msgstr "まず、ネイティブ実行可能ファイルをビルドします。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-09-01-using-lra.adoc:329
