--- a/l10n/po/ja_JP/_guides/capabilities.adoc.po
+++ b/l10n/po/ja_JP/_guides/capabilities.adoc.po
@@ -7,27 +7,26 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-07-13 17:41+0900\n"
+"PO-Revision-Date: 2022-02-04 16:44+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/capabilities.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Extension Capabilities"
-msgstr "ケイパビリティをクエリ"
+msgstr "エクステンションケイパビリティ"
 
 #. type: Plain text
 #: upstream/_guides/capabilities.adoc:11
-#, fuzzy
 msgid "Quarkus extensions may declare in their descriptors (`META-INF/quarkus-extension.properties` found in the runtime extension JAR artifact) that they provide certain capabilities. A capability represents a technical aspect, e.g. an implementation of some functionality or a specification. Each capability has a name which should follow the Java package naming convention, e.g. `io.quarkus.rest`."
 msgstr "Quarkusのエクステンションは、その記述子（ランタイムエクステンションのJARアーティファクトにある `META-INF/quarkus-extension.properties` ）の中で、特定の能力を提供することを宣言することができます。ケイパビリティは技術的な側面を表しており、例えばある機能の実装や仕様などです。各ケイパビリティには名前がついており、Javaパッケージの命名規則に従うべきです（例： `io.quarkus.rest` ）。"
 
