--- a/l10n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
@@ -50,7 +50,7 @@ msgstr "Quarkus 0.20.0をリリースしました。"
 #: upstream/_posts/2019-07-31-quarkus-0-20-0-released.adoc:14
 #, fuzzy
 msgid "If you use Quarkus with GraalVM to build native executables, Quarkus 0.20.0 now requires GraalVM 19.1.1 so please upgrade your GraalVM installation."
-msgstr "QuarkusとGraalVMを併用してネイティブな実行ファイルを構築している場合、Quarkus 0.20.0ではGraalVM 19.1.1が必要になりますので、GraalVMのインストールをアップグレードしてください。"
+msgstr "QuarkusとGraalVMを併用してネイティブ実行可能ファイルを構築している場合、Quarkus 0.20.0ではGraalVM 19.1.1が必要になりますので、GraalVMのインストールをアップグレードしてください。"
 
 #. type: Title ==
 #: upstream/_posts/2019-07-31-quarkus-0-20-0-released.adoc:16
