--- a/l10n/po/ja_JP/_versions/2.2/guides/deploying-to-heroku.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/deploying-to-heroku.adoc.po
@@ -324,7 +324,7 @@ msgstr "コンテナとしてデプロイ"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/deploying-to-heroku.adoc:151
 msgid "The advantage of pushing a whole container is that we are in complete control over its content and maybe even choose to deploy a container with a native executable running on GraalVM."
-msgstr "コンテナ全体をプッシュすることの利点は、その内容を完全にコントロールできることであり、GraalVM上で動作するネイティブな実行ファイルを持つコンテナをデプロイすることも可能です。"
+msgstr "コンテナ全体をプッシュすることの利点は、その内容を完全にコントロールできることであり、GraalVM上で動作するネイティブ実行可能ファイルを持つコンテナをデプロイすることも可能です。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/deploying-to-heroku.adoc:153
